Fix alignment in skill tags

--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -60,6 +60,7 @@
 
 .logo-grid h6 {
     text-align: center;
+    margin-top: 5px;
 }
 
 #other-skills {
